--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="OverlayTest.cs" />
     <Compile Include="TagTest.cs" />
     <Compile Include="BlankSetterTest.cs" />
     <Compile Include="AutocompleteTest.cs" />
