data. Crit table per hierarchy
--HG--
branch : f/CritWords

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -254,6 +254,7 @@
     <Compile Include="DTOs\UomDTO.cs" />
     <Compile Include="DTOs\UomTypeDTO.cs" />
     <Compile Include="DTOs\WordDTO.cs" />
+    <Compile Include="Mappings\CritMap.cs" />
     <Compile Include="Mappings\UomFormatMap.cs" />
     <Compile Include="Mappings\EstimatorMap.cs" />
     <Compile Include="Mappings\CriteriaGroupMap.cs" />
