tests. Fix for single Crit table
--HG--
branch : f/CritWords

--- a/Diagnosis.Models.Tests/Diagnosis.Models.Tests.csproj
+++ b/Diagnosis.Models.Tests/Diagnosis.Models.Tests.csproj
@@ -82,6 +82,7 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="ExtenstionsTest.cs" />
+    <Compile Include="CritTest.cs" />
     <Compile Include="WordTest.cs" />
     <Compile Include="CourseTest.cs" />
     <Compile Include="DateOffsetTest.cs" />
