code. non static AuthorityController. LogIn before any SuggestionsMaker usage, LogIn(d1) in InMemoryDatabaseTest

--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="AuthorityControllerTest.cs" />
     <Compile Include="OverlayTest.cs" />
     <Compile Include="TagTest.cs" />
     <Compile Include="BlankSetterTest.cs" />
