ScreenVMs as Avalon Documents
--HG--
branch : fix/Avalon

--- a/Diagnosis.Client.App/Resources/avalon-layout.config
+++ b/Diagnosis.Client.App/Resources/avalon-layout.config
@@ -1,15 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-16"?>
 <LayoutRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <RootPanel Orientation="Horizontal">
-    <LayoutAnchorablePane Id="7896874a-62cd-4d5b-b5f5-01f3f3e0ad4e" Name="Screen" DocMinWidth="320">
-      <LayoutAnchorable CanHide="False" AutoHideMinWidth="100" AutoHideMinHeight="100" Title="Пациенты" IsSelected="True" ContentId="Screen" CanClose="False" CanFloat="False" LastActivationTimeStamp="01/08/2015 21:13:32" />
-    </LayoutAnchorablePane>
-    <LayoutAnchorablePane Id="0092fc88-7dd9-4766-a60a-b3c96da5513e" Name="Search" DocMinWidth="320" FloatingWidth="320" />
+    <LayoutPanel Orientation="Horizontal">
+      <LayoutDocumentPaneGroup Orientation="Horizontal">
+        <LayoutDocumentPane>
+          <LayoutDocument Title="Пациенты" IsSelected="True" IsLastFocusedDocument="True" ContentId="Screen" CanClose="False" CanFloat="False" />
+        </LayoutDocumentPane>
+      </LayoutDocumentPaneGroup>
+    </LayoutPanel>
+    <LayoutAnchorablePaneGroup Orientation="Horizontal" DocMinWidth="320"FloatingWidth="320">
+      <LayoutAnchorablePane Id="0092fc88-7dd9-4766-a60a-b3c96da5513e" Name="Search" DocMinWidth="320" FloatingWidth="320" />
+    </LayoutAnchorablePaneGroup>
   </RootPanel>
   <TopSide />
   <RightSide>
     <LayoutAnchorGroup PreviousContainerId="0092fc88-7dd9-4766-a60a-b3c96da5513e">
-      <LayoutAnchorable AutoHideMinWidth="320" AutoHideMinHeight="100" Title="Поиск" ContentId="Search" CanClose="False" LastActivationTimeStamp="01/08/2015 16:06:15" />
+      <LayoutAnchorable CanHide="False" CanClose="False" AutoHideMinWidth="320" Title="Поиск" ContentId="Search" />
     </LayoutAnchorGroup>
   </RightSide>
   <LeftSide />
