ui. start with nonautohidden search (prevent empty LayoutAnchorGroup)
--HG--
branch : fix/Avalon

--- a/Diagnosis.Client.App/Resources/avalon-layout.config
+++ b/Diagnosis.Client.App/Resources/avalon-layout.config
@@ -9,14 +9,13 @@
       </LayoutDocumentPaneGroup>
     </LayoutPanel>
     <LayoutAnchorablePaneGroup Orientation="Horizontal" DocMinWidth="320" FloatingWidth="320">
-      <LayoutAnchorablePane Id="0092fc88-7dd9-4766-a60a-b3c96da5513e" Name="Search" DocMinWidth="320" FloatingWidth="320" />
+      <LayoutAnchorablePane Id="0092fc88-7dd9-4766-a60a-b3c96da5513e" Name="Search" DocMinWidth="320" FloatingWidth="320" >
+           <LayoutAnchorable CanHide="False" CanClose="False" AutoHideMinWidth="320" Title="Поиск" ContentId="Search" />
+      </LayoutAnchorablePane>
     </LayoutAnchorablePaneGroup>
   </RootPanel>
   <TopSide />
   <RightSide>
-    <LayoutAnchorGroup PreviousContainerId="0092fc88-7dd9-4766-a60a-b3c96da5513e">
-      <LayoutAnchorable CanHide="False" CanClose="False" AutoHideMinWidth="320" Title="Поиск" ContentId="Search" />
-    </LayoutAnchorGroup>
   </RightSide>
   <LeftSide />
   <BottomSide />
