login. fix Autologin when two doctors in db

--- a/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
+++ b/Diagnosis.ViewModels.Tests/Diagnosis.ViewModels.Tests.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="AuthorityControllerTest.cs" />
     <Compile Include="OverlayTest.cs" />
+    <Compile Include="LoginTest.cs" />
     <Compile Include="TagTest.cs" />
     <Compile Include="BlankSetterTest.cs" />
     <Compile Include="AutocompleteTest.cs" />
