--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -193,6 +193,10 @@
       <Link>Properties\GeneralAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Contracts.cs" />
+    <Compile Include="DomainHelpers\DateOffsetRounder.cs" />
+    <Compile Include="DomainHelpers\DateOffsetFormatter.cs" />
+    <Compile Include="DomainHelpers\PasswordHashManager.cs" />
+    <Compile Include="DomainHelpers\Plurals.cs" />
     <Compile Include="ValueObjects\MeasureOp.cs" />
     <Compile Include="ValueObjects\SearchOptions.cs" />
     <Compile Include="Entities\Admin.cs" />
@@ -203,7 +207,7 @@
     <Compile Include="Entities\Criterion.cs" />
     <Compile Include="Entities\Estimator.cs" />
     <Compile Include="CrossTables\CritWords.cs" />
-    <Compile Include="Helpers\StringsLength.cs" />
+    <Compile Include="DomainHelpers\StringsLength.cs" />
     <Compile Include="Entities\Passport.cs" />
     <Compile Include="Entities\HrItem.cs" />
     <Compile Include="ValueObjects\Comment.cs" />
@@ -220,7 +224,7 @@
     <Compile Include="Enums\MeasureOperator.cs" />
     <Compile Include="Enums\PatientsView.cs" />
     <Compile Include="Enums\HrView.cs" />
-    <Compile Include="Helpers\DomainExtenstions.cs" />
+    <Compile Include="DomainHelpers\DomainExtenstions.cs" />
     <Compile Include="Enums\HealthRecordUnit.cs" />
     <Compile Include="ValueObjects\Measure.cs" />
     <Compile Include="Entities\Uom.cs" />
@@ -233,13 +237,13 @@
     <Compile Include="Entities\IcdDisease.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Entities\Patient.cs" />
-    <Compile Include="Helpers\EntityExtensions.cs" />
+    <Compile Include="EntityHelpers\EntityExtensions.cs" />
     <Compile Include="Entities\HrCategory.cs" />
     <Compile Include="Entities\Speciality.cs" />
-    <Compile Include="Helpers\EditableObjectHelper.cs" />
-    <Compile Include="Helpers\Many2ManyHelper.cs" />
-    <Compile Include="Helpers\SettingsProvider.cs" />
-    <Compile Include="Helpers\EmtityComparers.cs" />
+    <Compile Include="EntityHelpers\EditableObjectHelper.cs" />
+    <Compile Include="EntityHelpers\Many2ManyHelper.cs" />
+    <Compile Include="DomainHelpers\SettingsProvider.cs" />
+    <Compile Include="DomainHelpers\EntityComparers.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="CrossTables\SpecialityIcdBlock.cs" />
     <Compile Include="Entities\Word.cs" />
