--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -273,7 +273,7 @@
     <Compile Include="Autocomplete\Extensions.cs" />
     <Compile Include="Autocomplete\IAutocompleteViewModel.cs" />
     <Compile Include="Autocomplete\SuggestionViewModel.cs" />
-    <Compile Include="Autocomplete\CreatedWordsManager.cs" />
+    <Compile Include="CreatedWordsManager.cs" />
     <Compile Include="Controls\Interfaces.cs" />
     <Compile Include="DataTransfer\ClipboardHelper.cs" />
     <Compile Include="DataTransfer\DragDropHelper.cs" />
@@ -281,15 +281,14 @@
     <Compile Include="DataTransfer\HrData.cs" />
     <Compile Include="Screens\AbstractNavigator.cs" />
     <Compile Include="Screens\Card\CardNavigator.cs" />
-    <Compile Include="Screens\FilterableListHelper.cs" />
+    <Compile Include="Screens\_Helpers\FilterableListHelper.cs" />
     <Compile Include="Screens\HealthRecords\HrViewColumnHelper.cs" />
     <Compile Include="Screens\HierViewer.cs" />
     <Compile Include="DataTransfer\TagData.cs" />
-    <Compile Include="Screens\NavigatorHelper.cs" />
-    <Compile Include="Screens\ExistanceTester.cs" />
+    <Compile Include="Screens\_Helpers\NavigatorHelper.cs" />
+    <Compile Include="Screens\_Helpers\ExistanceTester.cs" />
     <Compile Include="Screens\Search\CritStatistic.cs" />
     <Compile Include="Screens\Search\HrsStatistic.cs" />
-    <Compile Include="Services\DateOffsetFormatter.cs" />
     <Compile Include="Framework\Interfaces.cs" />
     <Compile Include="Framework\MenuItem.cs" />
     <Compile Include="Framework\VisibleRelayCommand.cs" />
@@ -366,7 +365,7 @@
     <Compile Include="Screens\Search\StatisticBase.cs" />
     <Compile Include="Types\CheckableBase.cs" />
     <Compile Include="Screens\Card\Editors\AppointmentViewModel.cs" />
-    <Compile Include="Autocomplete\DiagnosisViewModel.cs" />
+    <Compile Include="Screens\DiagnosisViewModel.cs" />
     <Compile Include="Screens\HealthRecords\HealthRecordManager.cs" />
     <Compile Include="Screens\Card\HealthRecordViewModel.cs" />
     <Compile Include="Screens\Words\WordViewModel.cs" />
