code. Move to Controls folder

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -266,13 +266,14 @@
       <Link>Properties\GeneralAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AuthorityController.cs" />
-    <Compile Include="Autocomplete\AutocompleteViewModel - ClipboardTarget.cs" />
-    <Compile Include="Autocomplete\AutocompleteViewModel - DragDrop.cs" />
-    <Compile Include="Autocomplete\BlankSetter.cs" />
-    <Compile Include="Autocomplete\Contracts.cs" />
-    <Compile Include="Autocomplete\Extensions.cs" />
-    <Compile Include="Autocomplete\IAutocompleteViewModel.cs" />
-    <Compile Include="Autocomplete\SuggestionViewModel.cs" />
+    <Compile Include="Controls\Autocomplete\AutocompleteViewModel - ClipboardTarget.cs" />
+    <Compile Include="Controls\Autocomplete\AutocompleteViewModel - DragDrop.cs" />
+    <Compile Include="Controls\Autocomplete\BlankSetter.cs" />
+    <Compile Include="Controls\Autocomplete\Contracts.cs" />
+    <Compile Include="Controls\Autocomplete\Extensions.cs" />
+    <Compile Include="Controls\Autocomplete\IAutocompleteViewModel.cs" />
+    <Compile Include="Controls\Autocomplete\SuggestionViewModel.cs" />
+    <Compile Include="Controls\DatePickerViewModel.cs" />
     <Compile Include="CreatedWordsManager.cs" />
     <Compile Include="Controls\Interfaces.cs" />
     <Compile Include="DataTransfer\ClipboardHelper.cs" />
@@ -301,7 +302,7 @@
     <Compile Include="Framework\Services\FileType.cs" />
     <Compile Include="Screens\Card\DateEditorViewModel.cs" />
     <Compile Include="Screens\Card\HolderViewModel.cs" />
-    <Compile Include="Autocomplete\MeasureEditorViewModel.cs" />
+    <Compile Include="Controls\MeasureEditorViewModel.cs" />
     <Compile Include="Screens\Criteria\CriteriaItemViewModel.cs" />
     <Compile Include="Screens\Criteria\CriteriaViewModel.cs" />
     <Compile Include="Screens\Criteria\Editors\CriteriaGroupViewModel.cs" />
@@ -319,8 +320,8 @@
     <Compile Include="Screens\Interfaces.cs" />
     <Compile Include="Screens\Criteria\Editors\CriterionEditorViewModel.cs" />
     <Compile Include="Screens\Search\HrsSearchResultViewModel.cs" />
-    <Compile Include="Screens\Search\QueryBlockViewModel.cs" />
-    <Compile Include="Screens\Search\QueryEditorViewModel.cs" />
+    <Compile Include="Controls\QueryBlockViewModel.cs" />
+    <Compile Include="Controls\QueryEditorViewModel.cs" />
     <Compile Include="Screens\Search\CritResultItemViewModel.cs" />
     <Compile Include="Screens\Search\CritSearchResultViewModel.cs" />
     <Compile Include="Screens\SyncViewModel.cs" />
@@ -357,7 +358,7 @@
     <Compile Include="Screens\Words\WordEditorViewModel.cs" />
     <Compile Include="Screens\Vocabularies\VocabularyViewModel.cs" />
     <Compile Include="Services\Exporter.cs" />
-    <Compile Include="Autocomplete\IcdSelectorViewModel.cs" />
+    <Compile Include="Controls\IcdSelectorViewModel.cs" />
     <Compile Include="Screens\Search\HrsResultItemViewModel.cs" />
     <Compile Include="Screens\Search\OptionsLoaderViewModel.cs" />
     <Compile Include="Controls\HistoryViewModel.cs" />
@@ -370,7 +371,7 @@
     <Compile Include="Screens\Card\HealthRecordViewModel.cs" />
     <Compile Include="Screens\Words\WordViewModel.cs" />
     <Compile Include="Framework\SessionVMBase.cs" />
-    <Compile Include="Screens\HealthRecords\EventDateViewModel.cs" />
+    <Compile Include="Controls\EventDateViewModel.cs" />
     <Compile Include="Types\HierarchicalBase.cs" />
     <Compile Include="Screens\Card\HrEditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -387,9 +388,9 @@
     <Compile Include="Screens\Search\SearchViewModel.cs" />
     <Compile Include="Screens\Settings\SettingsViewModel.cs" />
     <Compile Include="Screens\Words\WordsListViewModel.cs" />
-    <Compile Include="Autocomplete\AutocompleteViewModel.cs" />
-    <Compile Include="Autocomplete\SuggestionsMaker.cs" />
-    <Compile Include="Autocomplete\TagViewModel.cs" />
+    <Compile Include="Controls\Autocomplete\AutocompleteViewModel.cs" />
+    <Compile Include="Controls\Autocomplete\SuggestionsMaker.cs" />
+    <Compile Include="Controls\Autocomplete\TagViewModel.cs" />
     <Compile Include="Controls\FilterViewModel.cs" />
     <Compile Include="Controls\PopupSearchViewModel.cs" />
     <Compile Include="Framework\ViewModelBase.cs" />
@@ -412,16 +413,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Autocomplete\IAutocomplete.dgml" />
+    <None Include="Controls\Autocomplete\IAutocomplete.dgml" />
     <None Include="Screens\Criteria\Crit.cd" />
     <None Include="Framework\CodeMap1.dgml" />
     <None Include="packages.config" />
     <None Include="Screens\Card\Card.cd" />
-    <None Include="Autocomplete\Auto-SugMaker-Tag.dgml">
+    <None Include="Controls\Autocomplete\Auto-SugMaker-Tag.dgml">
       <SubType>Designer</SubType>
     </None>
     <None Include="Screens\Card\CardCodeMap.dgml" />
-    <None Include="Screens\HealthRecords\CodeMap1.dgml" />
     <None Include="Screens\Search\CodeMap1.dgml" />
     <None Include="Screens\Search\SearchClassDiagram.cd" />
   </ItemGroup>
